--- a/allPosts.css
+++ b/allPosts.css
@@ -1,22 +1,15 @@
 /* ---------- root variables ---------- */
 :root {
-    --green: rgb(249, 250, 250);
-    --light-green: rgb(101, 77, 129);
-    --light-grey: #f60606;
-    --text-color-light: #d29494;
-    --text-color-dark: #e31515;
-    --white: #efe9e9;
-    --font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family: Copperplate, sans-serif;
 }
 
-
-
-html, body{
-    margin: 0;
-    padding: 0;
-    height: 100%;
+/* ---------- general styling ---------- */
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
-
 
 body {
   background-color: black;
@@ -26,31 +19,32 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  font-family: var(--font-family);
 }
 
+a {
+  text-decoration: none;
+}
 
 header a {
-	color: none;
-	font-size: 25px;
-	text-decoration: none; 
-	display: block;
-	margin: 0 auto;
-	padding: 20px;
-	width: fit-content;
+  color: var(--white);
+  font-size: 25px;
+  display: block;
+  margin: 0 auto;
+  padding: 20px;
+  width: fit-content;
 }
 
-
 header h1 {
-	color: rgba(245, 245, 245, 0.714);
-	font-size: 25px;
-	margin: 0;
-    text-align: center;
+  color: rgba(245, 245, 245, 0.714);
+  font-size: 25px;
+  margin: 0;
+  text-align: center;
 }
 
 header h1:hover {
-	color: #ccc;
+  color: #ccc;
 }
-
 
 footer {
   padding: 10px 0;
@@ -59,229 +53,579 @@ footer {
   float: left;
   bottom: 0;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.8); /* white color with 80% opacity */
+  background-color: rgba(255, 255, 255, 0);
+  /* transparent background */
 }
 
 
 footer ul {
-	margin: 0;
-	padding: 0;
-    float: left;
-	list-style-type: none;
+  margin: 0;
+  padding: 0;
+  float: left;
+  list-style-type: none;
 }
 
 footer li {
-	display: inline-block;
-	margin: 0 65px;
+  display: inline-block;
+  margin: 0 65px;
 }
 
 footer li a {
-	color: rgba(0, 0, 0, 0.714);
-	font-size: 20px;
-	text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-size: 22px;
+  /* increase font size */
+  font-weight: bold;
+  /* increase font weight */
+  text-decoration: none;
 }
 
 footer li a:hover {
-	color: #ccc;
+  color: #000000;
 }
-
-
 
 /* ---------- main page styling ---------- */
 main {
-    background: black;
-    animation: fadeIn 0.4s;
-    padding: 190px 0 0;
+  background: black;
+  animation: fadeIn 0.4s;
+  padding: 190px 0 0;
 }
 
 /* ---------- animations ---------- */
 /* fade in */
 @keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
+  from {
+    opacity: 0;
+  }
 
-    to {
-        opacity: 1;
-    }
+  to {
+    opacity: 1;
+  }
 }
 
 /* ---------- grid container styling ---------- */
 .grid-container {
-    
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 1em;
-    padding: 1em;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 20px;
+  padding: 20px;
+  justify-items: center;
 }
 
-@media (min-width: 600px) {
-    .grid-container {
-        grid-template-columns: 1fr 1fr;
-    }
+@media screen and (max-width: 1000px) {
+  .grid-container {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
 }
 
-@media (min-width: 992px) {
-    .grid-container {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
-@media (min-width: 1200px) {
-    .grid-container {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-}
-@media (min-width: 1500px) {
-    .grid-container {
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    }
-}
+
 
 /* ---------- grid item styling ---------- */
-
 .grid-item {
-    box-shadow: 1px 1px 8px rgba(70, 67, 67, 0.25);
-    padding: 1.5em;
-    background-color: var(--white);
-    transition: 0.5s;
-    animation: fadeIn 0.5s;
-    cursor: pointer;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
+  transition: all 0.3s ease-in-out;
 }
 
 .grid-item:hover {
-    box-shadow: 0 8px 16px 0 var(--green);
+  transform: scale(1.05);
 }
 
 .grid-item img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.grid-item p {
-    margin: 0.3em 0;
+.grid-item .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
 }
 
-.grid-item h3:first-letter,
-.grid-item p:first-letter {
-    text-transform: uppercase;
+.grid-item:hover .overlay {
+  opacity: 1;
 }
 
-/* ---------- buttons in grid container ---------- */
-
-.grid-container .btns {
-    padding: 1em 0 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1em;
+.grid-item .overlay h3 {
+  color: var(--white);
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 5px;
+  text-align: center;
 }
 
-.grid-container .btns button {
-    width: 100%;
+.grid-item .overlay p {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 14px;
+  text-align: center;
+  margin: 0;
+  padding: 0 10px;
+  line-height: 1.4;
+  height: 70px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
 }
 
-/* ---------- form styling ---------- */
-/* input form styling */
-form {
-    margin: 2em auto 0;
-    background-color: var(--light-green);
-    padding: 1em 1em 2em;
-    text-align: center;
+.grid-item .overlay a {
+  color: var(--green);
+  text-decoration: none;
+  font-size: 14px;
+  margin-top: 10px;
+  text-align: center;
+  border: 2px solid var(--green);
+  padding: 10px 20px;
+  border-radius: 30px;
+  transition: all 0.3s ease-in-out;
 }
 
-button {
-    font-weight: 300;
-    font-size: 1em;
-    text-align: center;
-    cursor: pointer;
-    border: 2px solid var(--green);
-    color: var(--text-color-light);
-    background-color: var(--green);
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    padding: 0.5em 1em;
-    width: 100%;
-    max-width: 380px;
+.grid-item .overlay a:hover {
+  background-color: var(--green);
+  color: var(--white);
 }
 
-header button {
-    color: var(--green);
-    background-color: var(--light-green);
-    box-shadow: 1px 1px 8px rgba(187, 41, 41, 0.25);
+/* ========== dialog styling ========== */
+
+/*--POST CLICKED DIALOG (moreinfo dialog)--*/
+#post-clicked-dialog {
+  height: 1080px;
+  width: 1500px;
+  background-color: black;
+  border-radius: 25px;
+  animation: fadeIn 0.3s;
+
 }
 
-input {
-    margin: 1em auto;
-    width: 100%;
-    max-width: 350px;
-    padding: 1em;
-    border: 2px solid white;
-    display: block;
-    background: var(--white);
+#post-clicked-dialog p {
+  color: white;
+  font-size: 3em;
 }
 
-.btn-cancel {
-    background: var(--light-green);
-    margin: 0 0 1em;
+#post-clicked-dialog img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  padding-top: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 125px;
 }
 
-select {
-    background-color: var(--green);
-    border: none;
-    color: var(--text-color-light);
-    padding: 1em;
-    margin: 1em;
-    max-width: 350px;
+
+#post-clicked-info {
+  position: absolute;
+  bottom: 100px;
+  right: 50px;
 }
 
-/* ---------- dialog styling ---------- */
+/*update-post-dialog*/
 
-dialog {
-    border-color: var(--green);
-    background-color: var(--light-green);
-    width: 65vw;
-    padding: 2em 1em;
+#update-post-dialog {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: Copperplate, sans-serif;
+  color: white;
 }
 
-dialog::backdrop {
-    background: rgb(172, 198, 201, 0.8);
+#update-post-dialog form {
+  background: rgba(128, 128, 128, 0.267);
+  width: 640px;
+  margin: 50px auto;
+  max-width: 97%;
+  border-radius: 10px;
+  padding: 55px 30px 40px 1;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.184);
+  height: 100%;
+  /* added */
 }
 
-.dialog-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+#update-post-dialog .title h2 {
+  letter-spacing: 5px;
+  border-bottom: 1px solid white;
+  display: inline-block;
+  padding-bottom: 8px;
+  margin-bottom: 32px;
 }
 
-dialog h4 {
-    margin-bottom: 0;
-}
-dialog ul {
-    margin: 0.5em 0 1em;
-    padding-inline-start: 1.5em;
-}
-dialog p {
-    text-align: center;
+#update-post-dialog .half {
+  display: flex;
+  justify-content: space-between;
 }
 
-/* ---------- tools grid styling ---------- */
-
-.tools-grid {
-    background-color: var(--light-grey);
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 1em;
-    padding: 1em;
-    justify-content: space-between;
-    justify-items: stretch;
+#update-post-dialog .half .item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-@media (min-width: 600px) {
-    .tools-grid {
-        grid-template-columns: auto auto;
-        margin: 1em auto;
-    }
+#update-post-dialog label {
+  font-size: 13px;
+  letter-spacing: 3.5px;
+  margin-bottom: 16px;
 }
 
-.tools-grid label {
-    max-width: 350px;
+#update-post-dialog .half .item input {
+  border-radius: 4px;
+  border: 1px solid white;
+  outline: 0;
+  padding: 16px;
+  width: 100%;
+  height: 44px;
+  background: transparent;
+  font-size: 17px;
+}
+
+#update-post-dialog .full {
+  margin-bottom: 24px;
+  padding-top: 10px;
+}
+
+#update-post-dialog .full textarea {
+  background: transparent;
+  border-radius: 4px;
+  border: 1px solid white;
+  outline: 0;
+  padding: 12px 16px;
+  width: 100%;
+  height: 200px;
+  font-size: 17px;
+}
+
+#update-post-dialogform .action {
+  margin-bottom: 30px;
+}
+
+#update-post-dialog .full label {
+  display: block;
+  text-align: center;
+}
+
+#update-post-dialog form .action input {
+  background: rgba(128, 128, 128, 0.267);
+  border-radius: 2px;
+  border: 1px solid white;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 600;
+  height: 26px;
+  letter-spacing: 3px;
+  outline: 0;
+  padding: 0 10px 0 12px;
+  margin-right: 10px;
+}
+
+#update-post-dialog .item1,
+#update-post-dialog .item2,
+#update-post-dialog .item3 {
+  text-align: center;
+}
+
+#update-post-dialog .item1 input,
+#update-post-dialog .item2 input,
+#update-post-dialog .item3 input {
+  background-color: rgba(255, 255, 255, 0.277);
+  border: 1px solid white;
+}
+
+
+/*delete-post-dialog*/
+#delete-post-dialog {
+  background: rgba(128, 128, 128, 0.267);
+  width: 640px;
+  margin: 50px auto;
+  max-width: 97%;
+  border-radius: 10px;
+  padding: 55px 30px 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.184);
+  height: 200px;
+  text-align: center;
+  font-family: Copperplate, sans-serif;
+  color: white;
+  animation: fadeIn 0.3s;
+}
+
+#btn-cancel {
+  position: absolute;
+  left: 125px;
+  width: 100px;
+  background: rgba(128, 128, 128, 0.267);
+  border-radius: 2px;
+  border: 1px solid white;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 600;
+  height: 26px;
+  letter-spacing: 3px;
+  outline: 0;
+  padding: 0 10px 0 12px;
+}
+
+#confirm-delete {
+  position: absolute;
+  right: 125px;
+  width: 100px;
+  background: rgba(128, 128, 128, 0.267);
+  border-radius: 2px;
+  border: 1px solid white;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 600;
+  height: 26px;
+  letter-spacing: 3px;
+  outline: 0;
+  padding: 0 10px 0 12px;
+}
+
+/* createpost form/dialog style*/
+
+
+#create-post-dialog {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  box-shadow: none;
+  background-image: url('https://lh3.googleusercontent.com/-0Sp8b99qOVy832wzIFhqSF763SdqNX93wVAsT3QN63i_i1z0lo6PjBpTIDyhWl8mnJ3w-Qf4uBQHSCiJgBges17COulR9Jn0QO-Xuuon3JxeGkTQsQudOIpbhvfnxRk1Rgtz_3qtMGG1uporAPo_rQptsNGe27goVw8e6wiAiqhaaKVnB0Eet74ssYwLawMdl0oHFYm0sJ1q7gmHuCc7vGR_517tDG9ZwP0bwnE1YwtR0a88c7AMhS75cTLC42MWv149rg2HZHuR4MS1Xh1R9g9G_oT2009U5ulIT2wxddYZ1s078N-neBpxjsN44HCSBcCm-hMW9upW3TTUeSG-n2S7xHFaZhyRenkSySbMSFhAEuuUhff542MY_vn_TtF1GoX1mOQgLrtebil4m4O__i3SPPClSciGkvDH3C0yIqu1-JAFmVLYXsgXaU_TlN6RmuZUwb-SSOV8ZQkd0zZdpwmKch_Y93ZzFUEZvHKDqB2DG3hzdgTCuMwfgk5g43r2IKRT9s0ya16-SfiVPv6Z3mWP8yXf7--AQ06yNnaDw6uSH_4dYy6RAPIubegZxGGkVD9t5TWRPkdVzgvCaCOmYOtn8-Varp9F6blq66zRDJuzCCyvkR4AMjkD2iblBiN9UtWP98UpkFckMEkIqVoUk75PcKO_lilN5DaCvnc24_bPRks2mjT8bAf2--t8_1WzDBFto0Ohq_UMrNZksem2svh4vxS2Zvlg9U0wKsRbXqjFt0f_L9RRKkqYV1AxGpRIqSoMNzt0SvXRkM9SCLUg0VZYa8g6f_B1RYqHvgatCMDuSp9v9WeEoFqe7anwlFY9m9ty2G-BNGfi0LAyjDPuYS6fCDCoGYCBnTkaDyLWXJDXAT4zCyspry6UETbE43ff2BwwjuAVcRP0YxKeICcyDsu_P9bL34bfHHdZwfd6jixEdn4=w1170-h658-s-no?authuser=0');
+  background-color: black;
+  background-size: cover;
+  background-position: center;
+}
+
+
+#picture-author,
+#picture-song,
+#picture-year {
+  display: inline-block;
+  width: 45%;
+  margin: 0 5% 10px 5%;
+  box-sizing: border-box;
+}
+
+#chuliki-form * {
+
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: Copperplate, sans-serif;
+  color: rgb(255, 255, 255);
+}
+
+#chuliki-form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 500px;
+  max-height: 620px;
+  margin: auto;
+}
+
+#chuliki-form form {
+  background: rgba(70, 67, 67, 0.267);
+  width: 640px;
+  margin: 50px auto;
+  max-width: 97%;
+  border-radius: 10px;
+  padding: 55px 30px 40px 1;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.184);
+  height: 100%;
+  /* added */
+  text-align: center;
+}
+
+#chuliki-form form .title h2 {
+  letter-spacing: 5px;
+  border-bottom: 1px solid white;
+  display: inline-block;
+  padding-bottom: 8px;
+  margin-bottom: 32px;
+
+
+}
+
+#chuliki-form form .half {
+  display: flex;
+  justify-content: space-between;
+}
+
+#chuliki-form form .half .item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#chuliki-form form label {
+  font-size: 13px;
+  letter-spacing: 3.5px;
+  margin-bottom: 16px;
+}
+
+#chuliki-form form .half .item input {
+  border-radius: 4px;
+  border: 1px solid white;
+  outline: 0;
+  padding: 16px;
+  width: 100%;
+  height: 44px;
+  background: transparent;
+  font-size: 17px;
+}
+
+#chuliki-form form .full {
+  margin-bottom: 24px;
+  padding-top: 10px;
+}
+
+#chuliki-form form .full textarea {
+  background: transparent;
+  border-radius: 4px;
+  border: 1px solid white;
+  outline: 0;
+  padding: 12px 16px;
+  width: 100%;
+  height: 200px;
+  font-size: 17px;
+}
+
+#chuliki-form form .action {
+  margin-bottom: 30px;
+}
+
+#chuliki-form .full label {
+  display: block;
+  text-align: center;
+}
+
+#chuliki-form form .action input {
+  background: rgba(128, 128, 128, 0.267);
+  border-radius: 2px;
+  border: 1px solid white;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 600;
+  height: 26px;
+  letter-spacing: 3px;
+  outline: 0;
+  padding: 0 10px 0 12px;
+  margin-right: 10px;
+}
+
+#chuliki-form .item1,
+#chuliki-form .item2,
+#chuliki-form .item3 {
+  text-align: center;
+}
+
+#chuliki-form .item1 input,
+#chuliki-form .item2 input,
+#chuliki-form .item3 input {
+  background-color: rgba(255, 255, 255, 0.277);
+  border: 1px solid white;
+}
+
+.button-like-text {
+  background: none;
+  border: none;
+  color: rgb(0, 0, 0);
+  font-size: 22px;
+  font-weight: bold;
+  font-family: Copperplate, sans-serif;
+  text-decoration: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+}
+
+.button-like-text:hover {
+  color: #000000;
+}
+
+
+/*button position n styling*/
+#update-button {
+  right: 10px;
+}
+
+#delete-button {
+  left: 10px;
+}
+
+.button,
+.button-2 {
+  align-items: center;
+  appearance: none;
+  background-color: rgba(128, 128, 128, 0.267);
+  border-radius: 4px;
+  border: 1px solid white;
+  box-sizing: border-box;
+  color: white;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: Copperplate, sans-serif;
+  font-size: 18px;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+}
+
+.button-2 {
+  background-color: rgba(128, 128, 128, 0.267);
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  padding: 10px 12px;
+}
+
+.button:focus,
+.button-2:focus {
+  box-shadow: rgba(255, 255, 255, 0.2) 0 0 0 1.5px inset;
+}
+
+.button:hover,
+.button-2:hover {
+  box-shadow: rgba(255, 255, 255, 0.2) 0 4px 8px;
+  transform: translateY(-2px);
+}
+
+.button:active,
+.button-2:active {
+  box-shadow: rgba(255, 255, 255, 0.2) 0 3px 7px inset;
+  transform: translateY(2px);
 }
